# IC_Poetry

./: pyproject.toml
Relatório/: Cria.py
Relatório/templates/: cabeçalho.tex
dados/: cabeçalho.dvi  cabeçalho.tex
tests/relatorio/: test_cria.py
