[tool.poetry]
name = "poetry"
version = "0.1.0"
description = "Gerador de relatórios em LaTeX"
authors = ["Pedro Henrique Coterli <pedrocoterli@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
